# WINProductKey

./: Cargo.toml  LICENSE  README.md  index.html  package.json
src/: main.rs  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
