[package]
name = "winproductkey"
version = "0.2.0"
description = "A Tauri App"
authors = ["VdanielVPL"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
