[package]
name = "winproductkey"
version = "0.3.0"
description = "This application is a simple tool built with Rust and Tauri to retrieve the Windows product key from the system registry."
authors = ["VdanielVPL"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-write-text", "window-close", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
debug-assertions = false
panic = "abort"
codegen-units = 1
strip = true
lto = "fat"
debug = false
